<resources>
    <string name="app_name">ASEE Collection Manager</string>
    <string name="title_activity_home">moonwave</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cover_thumb_content_description">Cover Preview</string>
    <string name="search_action_text">Search</string>
    <string name="releases_menu_title">Mis Lanzamientos</string>
    <string name="default_release_title">DEFAULT RELEASE TITLE</string>
    <string name="default_artist_name">DEFAULT ARTIST NAME</string>
    <string name="release_separator">-</string>
    <string name="default_release_year">DEFAULT RELEASE YEAR</string>

    <string name="results_not_found">No se han encontrado resultados</string>
    <string name="list_info_text">INFO TEXT</string>
    <string name="list_title">LIST TITLE</string>
</resources>
