<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/cover_preview"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cover_thumb_content_description"
        android:padding="5dp"
        tools:srcCompat="@tools:sample/avatars" />

    <RelativeLayout
        android:id="@+id/rest_of_release_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/release_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="3dp"
            android:text="@string/default_release_title"
            android:textColor="@android:color/black"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/release_artist_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:padding="3dp"
                android:text="@string/default_artist_name"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:typeface="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/release_separator" />

            <TextView
                android:id="@+id/release_year_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:padding="3dp"
                android:text="@string/default_release_year"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="132dp"
            android:layout_height="18dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/release_rating_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageView
                android:id="@+id/release_rating_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageView
                android:id="@+id/release_rating_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageView
                android:id="@+id/release_rating_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageView
                android:id="@+id/release_rating_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                app:srcCompat="@android:drawable/star_big_on" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
